--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,10 @@ name = "pypi"
 
 [packages]
 flask = "~=2.1.3"
-sqlalchemy = "~=1.4.39"
 
 [dev-packages]
+pytest = "~=7.1.2"
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
